<resources>
    <string name="app_name">Inventory</string>

    <!--Login screen strings-->
    <string name="act_login_msg">Login / SignUp</string>
    <string name="edit_text_user">Email or ID</string>
    <string name="edit_text_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="text_view_or">OR</string>
    <string name="btn_create_user">Sign Up</string>


    <!-- Main Activity Strings -->

    <!-- Button Strings -->
    <string name="searchButton">Search</string>
    <string name="addItem">Add Item</string>
    <string name="configure">Configure Beacon</string>
    <string name="viewNearby">View Nearby</string>
    <string name="viewAll">View All</string>
    <string name="logout">Log out</string>

    <!-- Item Info Activity Strings -->
    <string name="viewOnMap">View On Map</string>

    <!-- Text View Strings -->
    <string name="itemName">Item Name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="geolocation">GeoLocation</string>
    <string name="beacon">beacon</string>
    <string name="tags">Tags</string>

    <!-- Button Strings -->
    <string name="checkout">Checkout</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>

    <string name="auth_failed">Authentication:success</string>
    <string name="sign_in_success">signInWithEmail:success</string>
    <string name="sign_up_success">createUserWithEmailAndPassword:failure</string>
    <string name="sign_in_fail">signInWithEmail:failure</string>
    <string name="sign_up_fail">createUserWithEmailAndPassword:failure</string>

    <!--Checked Out Strings-->
    <string name="checkedOutString">Items</string>
    <string name="checkedInString">Checkin</string>

    <!--labels-->
    <string name="welcome">Welcome!</string>
    <string name="addItemLabel">Add Item</string>
    <string name="searchItemLabel">Search for Item</string>
    <string name="viewAllLabel">View All</string>
    <string name="itemInfo">Item Info</string>


</resources>
